fix: add first images, too big tho

--- a/apps/ashleypetersenphoto.com/src/styles/global-styles.scss
+++ b/apps/ashleypetersenphoto.com/src/styles/global-styles.scss
@@ -7,3 +7,7 @@ body {
 a {
   text-decoration: none;
 }
+
+div[data-radix-popper-content-wrapper] {
+  will-change: unset !important;
+}
